test: use Set.of in SpringServiceTest
Agent-Logs-Url: https://github.com/hazendaz/jaxws-spring/sessions/16a7c627-6108-48bd-ae24-a68cb798a2bf

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>