@@ -31,7 +31,6 @@ import java.lang.reflect.Field;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -181,7 +180,7 @@ public class SpringServiceTest {
 
         @Override
         public Set<QName> getHeaders() {
-            return Collections.emptySet();
+            return Set.of();
         }
     }
 }
